--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         /* HERO BÖLÜMÜ */
         .hero {
-            height: 90vh;
+            min-height: 100vh;
             background: linear-gradient(rgba(0, 0, 50, 0.2), rgba(0, 0, 50, 0.5)), url('3.jpeg') no-repeat center center/cover;
             display: flex;
             align-items: center;
@@ -35,7 +35,7 @@
             text-align: center;
             color: white;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
-            animation: fadeIn 1.5s ease-in-out;
+            padding: 20px;
         }
 
         .hero h1 {
@@ -64,24 +64,12 @@
             background: #25D366;
             color: white;
             font-weight: 600;
+            text-align: center;
         }
 
         .btn-whatsapp:hover {
             background: #1ebe5d;
             transform: scale(1.05);
-        }
-
-        /* GÖLGE ANİMASYON */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
         }
 
         /* ANA İÇERİK */
@@ -97,28 +85,13 @@
         .about {
             background: #002b5c;
             color: white;
-            padding: 70px 50px;
+            padding: 50px;
             border-radius: 15px;
             text-align: center;
-            position: relative;
         }
 
         .about h2 {
             font-size: 2.5em;
-            color: #ffffff;
-            margin-bottom: 15px;
-            position: relative;
-            display: inline-block;
-        }
-
-        .about h2::after {
-            content: "";
-            width: 50px;
-            height: 3px;
-            background: #ffffff;
-            display: block;
-            margin: 10px auto;
-            border-radius: 3px;
         }
 
         .about p {
@@ -154,13 +127,7 @@
             border-radius: 10px;
             width: 300px;
             box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
             text-align: center;
-        }
-
-        .service-box:hover {
-            transform: scale(1.05);
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
         }
 
         .service-box i {
@@ -172,7 +139,6 @@
         .service-box h3 {
             font-size: 1.2em;
             font-weight: 600;
-            margin-bottom: 5px;
         }
 
         /* GALERİ */
@@ -188,12 +154,6 @@
             height: 420px;
             object-fit: cover;
             border-radius: 10px;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.03);
-            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
         }
 
         /* FOOTER */
@@ -203,33 +163,52 @@
             background: #002244;
             color: white;
             font-size: 1.1em;
-            position: relative;
         }
 
-        footer::before {
-            content: "";
-            width: 60px;
-            height: 3px;
-            background: #ffffff;
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            border-radius: 3px;
-        }
-
-
+        /* MOBİL UYUMLULUK */
         @media (max-width: 768px) {
-    .hero {
-        background-size: cover; /* Fotoğrafın ekranı kaplamasını sağlıyor */
-        background-position: center center; /* Görüntüyü tam ortalıyor */
-        background-attachment: scroll; /* Mobilde kaydırmaya uygun hale getiriyor */
-        min-height: 100vh; /* Mobilde tam ekran kaplamasını sağlıyor */
-    }
+            .hero {
+                min-height: 50vh;
+                background-size: cover;
+                background-position: center;
+                padding: 50px 20px;
+            }
 
-    .hero h1 { font-size: 2.5em; } /* Mobil için başlık boyutunu küçültüyoruz */
-    .hero p { font-size: 1.1em; } /* Mobil için açıklama yazısını optimize ediyoruz */
-}
+            .hero h1 {
+                font-size: 2.5em;
+            }
+
+            .hero p {
+                font-size: 1.1em;
+            }
+
+            .container {
+                width: 95%;
+            }
+
+            .about {
+                padding: 20px 10px;
+            }
+
+            .services-grid {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .gallery {
+                grid-template-columns: repeat(1, 1fr);
+            }
+
+            .gallery img {
+                height: auto;
+            }
+
+            .btn {
+                width: 90%;
+                text-align: center;
+                font-size: 1em;
+            }
+        }
     </style>
 </head>
 
@@ -269,7 +248,6 @@
 
         <footer>© 2025 Gökçe Transport - Tüm Hakları Saklıdır.</footer>
     </div>
-xq
 
 </body>
 
